# agentic-cli-test

./: SKILL.md  pyproject.toml
.claude/: settings.json
fordefi_agent/: __init__.py  _auth.py  _chains.py  _sanitize.py  _types.py  client.py
