[project]
name = "fordefi-agent"
version = "0.1.0"
description = "Fordefi API client for AI agents - transfers, contract calls, and swaps"
readme = "SKILL.md"
requires-python = ">=3.12"
dependencies = [
    "ecdsa>=0.19.0",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
